WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
20866
WebKit does not fire MSAA focus events
https://bugs.webkit.org/show_bug.cgi?id=20866
Summary
WebKit does not fire MSAA focus events
Jon Honeycutt
Reported
2008-09-15 16:45:29 PDT
WebKit should fire an EVENT_OBJECT_FOCUS event when an object on the page gains focus. <
rdar://problem/6218721
>
Attachments
Patch.
(20.23 KB, patch)
2009-08-14 20:42 PDT
,
Jon Honeycutt
oliver
: review+
Details
Formatted Diff
Diff
Layout test
(15.14 KB, patch)
2009-08-14 20:44 PDT
,
Jon Honeycutt
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jon@Chromium
Comment 1
2008-12-04 14:24:14 PST
This is blocking Chromium from supporting readers. See
http://code.google.com/p/chromium/issues/detail?id=2564
Jon Honeycutt
Comment 2
2009-08-14 20:42:47 PDT
Created
attachment 34885
[details]
Patch. Layout test to follow.
Jon Honeycutt
Comment 3
2009-08-14 20:44:45 PDT
Created
attachment 34886
[details]
Layout test Enables the accessibility tests on Windows, and adds a Windows-specific layout test for focus events.
Jon Honeycutt
Comment 4
2009-08-14 23:16:19 PDT
Committed in
r47311
,
r47312
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug