WebKit/win/AccessibleBase.cpp
@@ -592,7 +592,15 @@ HRESULT AccessibleBase::getAccessibilityObjectForChild(VARIANT vChild, Accessibi
 
     if (vChild.lVal == CHILDID_SELF)
         childObj = m_object;
-    else {
+    else if (vChild.lVal < 0) {
+        // When broadcasting MSAA events, we negate the AXID and pass it as the
+        // child ID.
+        Document* document = m_object->document();
+        if (!document)
+            return E_FAIL;
+
+        childObj = document->axObjectCache()->objectFromAXID(-vChild.lVal);
+    } else {
         size_t childIndex = static_cast<size_t>(vChild.lVal - 1);
 
         if (childIndex >= m_object->children().size())
